--- a/inventory-service.properties
+++ b/inventory-service.properties
@@ -4,8 +4,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/rentacarinventorydb
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.username=postgres
+spring.datasource.password=1234
 spring.jpa.properties.javax.persistence.validation.mode=none
 
 server.port=0
