--- a/filter-service-dev.yml
+++ b/filter-service-dev.yml
@@ -1,3 +1,14 @@
+eureka:
+  client:
+    fetchRegistry: true
+    registerWithEureka: true
+    serviceUrl:
+      defaultZone: http://localhost:9000/eureka
+  instance:
+    instance-id: ${spring.application.name}:${instanceId:${random.value}}
+    preferIpAddress: true
+server:
+  port: 0
 spring:
   application:
     name: filter-service
