--- a/filter-service-dev.yml
+++ b/filter-service-dev.yml
@@ -1,33 +1,32 @@
 eureka:
-    client:
-        fetchRegistry: true
-        registerWithEureka: true
-        serviceUrl:
-            defaultZone: http://localhost:9000/eureka
-    instance:
-        instance-id: ${spring.application.name}:${instanceId:${random.value}}
-        preferIpAddress: true
+  client:
+    fetchRegistry: true
+    registerWithEureka: true
+    serviceUrl:
+      defaultZone: http://localhost:9000/eureka
+  instance:
+    instance-id: ${spring.application.name}:${instanceId:${random.value}}
+    preferIpAddress: true
 server:
-    port: 0
+  port: 0
 spring:
-    application:
-        name: filter-service
-    data:
-        mongodb:
-            database: filterservice
-            host: localhost
-            port: 27017
-    kafka:
-        consumer:
-            auto-offset-reset: earliest
-            bootstrap-servers: localhost:9092
-            group-id: carFilter
-            key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-            properties:
-                spring:
-                    json:
-                        trusted:
-                            packages: '*'
-            value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
-        topic:
-            name: rental_topics2
+  application:
+    name: filter-service
+  data:
+    mongodb:
+      database: inventory
+      uri: mongodb://localhost:27017
+  kafka:
+    consumer:
+      auto-offset-reset: earliest
+      bootstrap-servers: localhost:9092
+      group-id: filter
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      properties:
+        spring:
+          json:
+            trusted:
+              packages: '*'
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+    topic:
+      name: rental_topics2
