--- a/inventory-service-dev.yml
+++ b/inventory-service-dev.yml
@@ -11,14 +11,15 @@ server:
     port: 0
 spring:
     application:
-        name: inventory-service
+        name: invertory-service
     datasource:
         password: 1234
-        url: jdbc:postgresql://localhost:5432/rentacarinventorydb
+        url: jdbc:postgresql://localhost:5434/rentacarinvertorydb
         username: postgres
     jpa:
         hibernate:
             ddl-auto: update
+            show-sql: true
         properties:
             hibernate:
                 dialect: org.hibernate.dialect.PostgreSQLDialect
@@ -31,14 +32,14 @@ spring:
         consumer:
             auto-offset-reset: earliest
             bootstrap-servers: localhost:9092
-            group-id: inventory2
+            group-id: inventory1
             key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
             properties:
                 spring:
                     json:
                         trusted:
                             packages: '*'
-            value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+            value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
         producer:
             bootstrap-servers: localhost:9092
             key-serializer: org.apache.kafka.common.serialization.StringSerializer
