--- a/filter-service-dev.yml
+++ b/filter-service-dev.yml
@@ -27,6 +27,6 @@ spring:
                     json:
                         trusted:
                             packages: '*'
-            value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+            value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
         topic:
             name: rental_topics2
