--- a/filter-service-dev.yml
+++ b/filter-service-dev.yml
@@ -29,4 +29,4 @@ spring:
                             packages: '*'
             value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
         topic:
-            name: rental_topics2
+            name: rental_topics
