update topic name

--- a/filter-service-prod.yml
+++ b/filter-service-prod.yml
@@ -29,4 +29,4 @@ spring:
                             packages: '*'
             value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
         topic:
-            name: tbyte
+            name: rental_topics
