--- a/inventory-service-prod.yml
+++ b/inventory-service-prod.yml
@@ -44,4 +44,4 @@ spring:
             key-serializer: org.apache.kafka.common.serialization.StringSerializer
             value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
         topic:
-            name: tbyte
+            name: rental_topics
