--- a/invoice-service-prod.yml
+++ b/invoice-service-prod.yml
@@ -40,4 +40,4 @@ spring:
                             packages: '*'
             value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
         topic:
-            name: tbyte
+            name: rental_topics
