--- a/rental-service-prod.yml
+++ b/rental-service-prod.yml
@@ -33,4 +33,4 @@ spring:
             key-serializer: org.apache.kafka.common.serialization.StringSerializer
             value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
         topic:
-            name: tbyte
+            name: rental_topics
