--- a/invoice-service-dev.yml
+++ b/invoice-service-dev.yml
@@ -41,3 +41,17 @@ spring:
             value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
         topic:
             name: rental_topics
+management:
+    endpoint:
+        metrics:
+            enabled: true
+        prometheus:
+            enabled: true
+    endpoints:
+        web:
+            exposure:
+                include: '*'
+    metrics:
+        export:
+            prometheus:
+                enabled: true
