--- a/payment-service-dev.yml
+++ b/payment-service-dev.yml
@@ -27,3 +27,18 @@ spring:
                     validation:
                         mode: none
         show-sql: true
+
+management:
+    endpoint:
+        metrics:
+            enabled: true
+        prometheus:
+            enabled: true
+    endpoints:
+        web:
+            exposure:
+                include: '*'
+    metrics:
+        export:
+            prometheus:
+                enabled: true
