--- a/filter-service-dev.yml
+++ b/filter-service-dev.yml
@@ -30,3 +30,17 @@ spring:
             value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
         topic:
             name: rental_topics
+management:
+    endpoint:
+        metrics:
+            enabled: true
+        prometheus:
+            enabled: true
+    endpoints:
+        web:
+            exposure:
+                include: '*'
+    metrics:
+        export:
+            prometheus:
+                enabled: true
