--- a/rental-service-dev.yml
+++ b/rental-service-dev.yml
@@ -34,3 +34,18 @@ spring:
             value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
         topic:
             name: rental_topics
+
+management:
+    endpoint:
+        metrics:
+            enabled: true
+        prometheus:
+            enabled: true
+    endpoints:
+        web:
+            exposure:
+                include: '*'
+    metrics:
+        export:
+            prometheus:
+                enabled: true
