--- a/invoice-service-dev.yml
+++ b/invoice-service-dev.yml
@@ -40,18 +40,19 @@ spring:
                             packages: '*'
             value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
         topic:
-            name: rental_topics
+            name: rental
+
 management:
-    endpoint:
-        metrics:
-            enabled: true
-        prometheus:
-            enabled: true
-    endpoints:
-        web:
-            exposure:
-                include: '*'
+  endpoint:
     metrics:
-        export:
-            prometheus:
-                enabled: true
+      enabled: true
+    prometheus:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  metrics:
+    export:
+      prometheus:
+        enabled: true
