--- a/rental-service-dev.yml
+++ b/rental-service-dev.yml
@@ -33,19 +33,19 @@ spring:
             key-serializer: org.apache.kafka.common.serialization.StringSerializer
             value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
         topic:
-            name: rental_topics
+            name: rental
 
 management:
-    endpoint:
-        metrics:
-            enabled: true
-        prometheus:
-            enabled: true
-    endpoints:
-        web:
-            exposure:
-                include: '*'
+  endpoint:
     metrics:
-        export:
-            prometheus:
-                enabled: true
+      enabled: true
+    prometheus:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  metrics:
+    export:
+      prometheus:
+        enabled: true
