--- a/invoice-service-dev.yml
+++ b/invoice-service-dev.yml
@@ -40,7 +40,7 @@ spring:
                             packages: '*'
             value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
         topic:
-            name: rental
+            name: rental1
 
 management:
   endpoint:
