--- a/rental-service-dev.yml
+++ b/rental-service-dev.yml
@@ -33,7 +33,7 @@ spring:
             key-serializer: org.apache.kafka.common.serialization.StringSerializer
             value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
         topic:
-            name: rental
+            name: rental1
 
 management:
   endpoint:
