--- a/eureka-server-dev.yml
+++ b/eureka-server-dev.yml
@@ -4,7 +4,7 @@ eureka:
         service-url:
             defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka
     instance:
-        hostname: localhost
+        hostname: discovery-server
 server:
     port: 9000
 spring:
